typescript/checker/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty5.ts.stderr
error: TS2585 {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty5.ts:3:6
  |
3 |     [Symbol.isRegExp]: string;
  |      ^^^^^^

